# hydro_simulator-tfg

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: config.yaml
configs/domain/: large.yaml  medium.yaml  small.yaml
configs/scenarios/: alternating.yaml  baseline.yaml  cold_spell.yaml  dry.yaml  extreme_event.yaml  heatwave.yaml  persistent_storm.yaml  wet.yaml
docs/: index.md  latent_environment.md
docs/architecture/: configuration.md  data-model-and-interfaces.md  data_model.md  module_diagram.md  overview.md
docs/methodology/: energy.md  hydrology.md  meteorology.md  observation-layer.md  routing-and-reservoirs.md
docs/usage/: cli.md  outputs.md
docs/validation/: validation-workflow.md
scripts/: inspect_latent_environment.py  inspect_precipitation_model.py
src/hydro_simulator_tfg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/simulator/: __init__.py
src/simulator/cli/: __init__.py  plot.py  run.py  validate.py
src/simulator/common/: validation.py
src/simulator/config/: __init__.py  loader.py  schemas.py
src/simulator/core/: contracts.py  dataset.py  engine.py  state.py  time.py  types.py
src/simulator/energy/: antecedent.py  model.py  pet.py  radiation.py  solar.py
src/simulator/hydro/: model.py  runoff.py  soil.py
src/simulator/meteo/: advection.py  background_field.py  latent_state.py  lifecycle.py  precipitation_model.py  regimes.py  render.py  storm_birth.py  storm_objects.py  temperature_field.py
src/simulator/obs/: model.py
src/simulator/routing/: __init__.py  model.py  network.py  rules.py  storage.py
tests/: conftest.py  test_cli_run.py  test_config.py  test_core.py  test_hydro_balance.py  test_latent_state.py  test_merge_module_outputs.py  test_meteo.py  test_meteo_regimes.py  test_observations.py  test_output_saving.py  test_pipeline.py  test_routing.py  test_schemas.py  test_simulation_dataset.py  test_simulation_state.py  test_spatial_domain.py  test_time.py
tests/config/: test_config_loader.py
tests/core/: test_time.py  test_types.py
tests/hydro/: test_hydro_balance.py
tests/meteo/: conftest.py  test_advection.py  test_background_field.py  test_lifecycle.py  test_meteorology_contract.py  test_precipitation_model.py  test_render.py  test_storm_birth.py  test_storm_objects.py
tests/obs/: test_model.py
